@@ -1380,11 +1380,16 @@
 
   <!-- Clustering Component
 
+       You'll need to set the solr.clustering.enabled system property
+       when running solr to run with clustering enabled:
+
+            java -Dsolr.clustering.enabled=true -jar start.jar
+
        http://wiki.apache.org/solr/ClusteringComponent
        http://carrot2.github.io/solr-integration-strategies/
     -->
   <searchComponent name="clustering"
-                   enable="${solr.clustering.enabled:true}"
+                   enable="${solr.clustering.enabled:false}"
                    class="solr.clustering.ClusteringComponent" >
     <!-- Declare a named clustering engine. Only one engine can be named 
          "default" (and it becomes the default one for the search component). 
@@ -1443,7 +1448,7 @@
     -->
   <requestHandler name="/clustering"
                   startup="lazy"
-                  enable="${solr.clustering.enabled:true}"
+                  enable="${solr.clustering.enabled:false}"
                   class="solr.SearchHandler">
     <lst name="defaults">
       <bool name="clustering">true</bool>
